# web-agent

./: .gitignore  CMakeLists.txt
config/: agent_config.json
src/: Agent.cpp  Agent.h  Config.cpp  Config.h  Logger.cpp  Logger.h  ProcessExecutor.cpp  ProcessExecutor.h  Task.h  main.cpp
